[FIX] mail:problem with horizontal scrolling on chatter
add pre-wrap in order to wrap text inside pre tag.
this allows text to be wrapped even if it's inside a pre tag.

opw-2425351

--- a/addons/mail/static/src/components/chatter/chatter.scss
+++ b/addons/mail/static/src/components/chatter/chatter.scss
@@ -9,6 +9,14 @@
     flex-direction: column;
 }
 
+.o_Chatter pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
+}
+
 .o_Chatter_composer {
     border-bottom: $border-width solid;
 
